# lizardfs

./: .gitignore  CMakeLists.txt  CMakeTestInline.cmake  CheckCXXExpression.cmake  CheckFunctions.cmake  CheckIncludes.cmake  CheckMembers.cmake  ConfigDeb.cmake  ConfigRpm.cmake  EnvTests.cmake  FindDB.cmake  FindFUSE.cmake  FindJudy.cmake  FindPAM.cmake  FindSocket.cmake  FindThrift.cmake  INSTALL  Jenkinsfile  Libraries.cmake  MFSCommunication.h  Makefile.am  NEWS  Packages.cmake  ProtocolConstants.cmake  README  README.md  ReleaseNotes  UPGRADE  autogen.sh  base_config.h.in  config.h.in  configure  configure.ac  create-deb-package.sh  create-osx-package.sh  create-rpm-package.sh  debug_symbols_use  mingw32-toolchain.cmake  package.sh  prepare_config.h.in  (+1 more)
doc/: CMakeLists.txt  Makefile.am  globaliolimits.cfg.5.txt  iolimits.cfg.5.txt  lfsappendchunks.1.txt  lfscgiserv.8.txt  lfscheckfile.1.txt  lfschunkserver.8.txt  lfschunkserver.cfg.5.txt  lfsdirinfo.1.txt  lfsexports.cfg.5.txt  lfsfileinfo.1.txt  lfsfilerepair.1.txt  lfsgeteattr.1.txt  lfsgetgoal.1.txt  lfsgettrashtime.1.txt  lfsgoals.cfg.5.txt  lfshdd.cfg.5.txt  lfsmakesnapshot.1.txt  lfsmaster.8.txt  lfsmaster.cfg.5.txt  lfsmetalogger.8.txt  lfsmetalogger.cfg.5.txt  lfsmetarestore.8.txt  lfsmount.1.txt  lfsrepquota.1.txt  lfstools.1.txt  lfstopology.cfg.5.txt  lizardfs-admin.8.txt  lizardfs-appendchunks.1.txt  lizardfs-cgiserver.8.txt  lizardfs-checkfile.1.txt  lizardfs-dirinfo.1.txt  lizardfs-fileinfo.1.txt  lizardfs-filerepair.1.txt  lizardfs-geteattr.1.txt  lizardfs-getgoal.1.txt  lizardfs-gettrashtime.1.txt  lizardfs-makesnapshot.1.txt  lizardfs-probe.8.txt  (+51 more)
etc/cgiserv/: CMakeLists.txt
etc/chunkserver/: CMakeLists.txt  mfschunkserver.cfg.in
etc/master/: CMakeLists.txt  daemon.init.initializeMetadataFile.part  mfsmaster.cfg.in  mfstopology.cfg
etc/metalogger/: CMakeLists.txt
man/mount/: CMakeLists.txt  mfsmount.8  mfstools.1
mfscgi/: CMakeLists.txt  Makefile.am  cgiserv.py.in  chart.cgi  chart.cgi.in  config.ini  index.html  mfs.cgi  mfs.cgi.in  mfs.css  run.py.in
mfscgi/cgi/: mfs.cgi
mfscgi/html/: help.html
mfschunkserver/: CMakeLists.txt  Makefile.am  bgjobs.c  bgjobs.cc  bgjobs.h  cfg.h  chartsdata.c  chartsdata.cc  chartsdata.h  chunk.cc  chunk.h  chunk_filename_parser.cc  chunk_filename_parser.h  chunk_signature.cc  chunk_signature.h  config.c  crc.c  csserv.c  csserv.cc  csserv.h  cstocsconn.c  cstocsconn.h  datapack.h  hddspacemgr.c  hddspacemgr.cc  hddspacemgr.h  init.h  lempelziv.c  lempelziv.h  main.c  main.h  masterconn.c  masterconn.cc  masterconn.h  output_buffers.cc  output_buffers.h  replicator.c  replicator.cc  replicator.h  sockets.c  (+3 more)
mfsdata/: CMakeLists.txt  Makefile.am  default.daemon.in  init.daemon.in  metadata.mfs  mfschunkserver.cfg.in  mfsexports.cfg  mfshdd.cfg  mfsmaster.cfg.in  mfsmetalogger.cfg.in  mfsmount.cfg  postinst.daemon.in  postrm.in  prerm.daemon.in
mfsdata/cgiserv/: CMakeLists.txt
mfsdata/chunkserver/: CMakeLists.txt
mfsdata/common/: CMakeLists.txt  postinst.in
mfsdata/master/: CMakeLists.txt
mfsdata/metalogger/: CMakeLists.txt
mfsmaster/: CMakeLists.txt  Makefile.am  acl.c  acl.h  cfg.c  changelog.c  changelog.cc  changelog.h  chartsdata.c  chartsdata.cc  chartsdata.h  chunks.c  chunks.cc  chunks.h  datacachemgr.c  datacachemgr.h  exports.c  exports.cc  exports.h  filesystem.c  filesystem.cc  filesystem.h  init.h  itree.c  itree.cc  itree.h  main.c  main.h  masterconn.c  masterconn.cc  masterconn.h  matoclserv.c  matoclserv.cc  matoclserv.h  matocsserv.c  matocsserv.cc  matocsserv.h  matocuserv.c  matocuserv.h  matomlserv.c  (+10 more)
mfsmetalogger/: CMakeLists.txt  Makefile.am  init.h  masterconn.c  masterconn.cc  masterconn.h
mfsmetarestore/: CMakeLists.txt  Makefile.am  main.c  main.cc  merger.c  merger.cc  merger.h  restore.c  restore.cc  restore.h
mfsmount/: CMakeLists.txt  Makefile.am  block_xor.cc  chunk_connector.cc  chunk_connector.h  chunk_locator.cc  chunk_locator.h  chunk_reader.cc  chunk_reader.h  chunkloccache.c  chunkloccache.cc  chunkserver_stats.cc  chunkserver_stats.h  crc.h  cscomm.c  cscomm.cc  cscomm.h  csdb.c  csdb.cc  csdb.h  dirattrcache.c  dirattrcache.cc  dirattrcache.h  exceptions.h  main.c  main.cc  mastercomm.c  mastercomm.cc  mastercomm.h  masterproxy.c  masterproxy.cc  mfs_fuse.c  mfs_fuse.cc  mfs_fuse.h  mfs_meta_fuse.c  mfs_meta_fuse.cc  mfs_meta_fuse.h  mfstools.c  mfstools.cc  mfstools.h  (+25 more)
mfstools/: CMakeLists.txt  Makefile.am  appendchunks.cc  appendchunks.h  checkfile.cc  checkfile.h  deleattr.cc  deleattr.h  delquota.cc  delquota.h  dirinfo.cc  dirinfo.h  extendedattr.cc  extendedattr.h  fileinfo.cc  fileinfo.h  filerepair.cc  filerepair.h  geteattr.cc  geteattr.h  getgoal.cc  getgoal.h  getquota.cc  getquota.h  gettrashtime.cc  gettrashtime.h  humodebased.cc  humodebased.h  lizardlink.cc  lizardlink.h  lizardtools.cc  lizardtools.h  makesnapshot.cc  makesnapshot.h  mfstools.cc  rgetgoal.cc  rgetgoal.h  rgettrashtime.cc  rgettrashtime.h  rsetgoal.cc  (+13 more)
test/: CMakeLists.txt
test/common/: CMakeLists.txt
tests/: CMakeLists.txt  README  lizardfs-tests.cc  revert_setup_machine.sh  run-test.sh  set_lizardfs_constants.sh.in  setup_machine.sh
tests/chunkserver_tests/: HddSpaceManager.cc  MyCrc32Tests.cc
tests/ci_build/: 60-ip_port_range.conf  Dockerfile.bookworm-build  Dockerfile.bookworm-test  Dockerfile.cppcheck  Dockerfile.cpplint  Dockerfile.debian10.13-build  Dockerfile.debian10.13-test  Dockerfile.debian11.5-build  Dockerfile.debian11.5-test  Dockerfile.ubuntu20.04-build  Dockerfile.ubuntu20.04-test  (+9 more)
utils/: CMakeLists.txt  asserts.h  chunk_converter.cc  chunk_operations_eio.c  configuration.h  coverage.sh  cpp-interpreter.sh  crc_converter.cc  data_generator.h  file_generate.cc  file_overwrite.cc  file_validate.cc  file_validate_growing.cc  flockcmd.cc  libfuse_acl.patch  linux_fuse_acl-2.6.32-431.patch  linux_fuse_acl.patch  lizardfs_mount_redhat_fix.patch  lizardfs_probe.cc  mfs_ping.cc  mfs_pingserv.cc  mypy.ini  ping_pong.cc  posixlockcmd.cc  readdir_unlink_test.cc  redirect_bind.c  slow_chunk_scan.c
(+1565 files in other folders)
